[workspace]
resolver = "2"
members = [
    "access_server",
    "common",
    "proxy_client",
    "proxy_server",
    "server",
    "tests",
]

[workspace.dependencies]
async-speed-limit = { version = "0.4", features = ["tokio"] }
async-trait = "0.1"
bincode = "1"
bytes = "1"
csv_logger = { git = "https://github.com/Banyc/csv_logger.git", rev = "d63ac71c4eeb55268102695b095fb6bf13b7ee8f" }
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.13", default-features = false }
monitor_table = { git = "https://github.com/Banyc/monitor_table.git", rev = "f9cbe7a0e792d793adbe5627402254b0c9eee46b" }
mptcp = { git = "https://github.com/Banyc/mptcp.git", rev = "8c0b8ee35bc7d570de272f5da7af6742b460e23a" }
openssl = "0.10"
serde = "1"
strict-num = "0.2"
swap = { git = "https://github.com/Banyc/swap.git", rev = "d10a8b5b10503fa6ebac523cfcaa4d62135a665f" }
table_log = { git = "https://github.com/Banyc/table_log.git", rev = "eb936cc4521dd62854a1272da6908f7d70261c2c" }
thiserror = "1"
tokio = "1"
tokio-util = "0.7"
tokio_chacha20 = { git = "https://github.com/Banyc/tokio_chacha20.git", rev = "40d2030f0ab6e7e32031e61618717d25f25e5509" }
tokio_conn_pool = { git = "https://github.com/Banyc/tokio_conn_pool.git", rev = "fe3ca233f081d2355bd8a7d730fa8e9bc0b35d35" }
tokio_kcp = "0.9"
tokio_throughput = { git = "https://github.com/Banyc/tokio_throughput.git", rev = "80cbf0572623762665caff07781cee3e0d97cfc7" }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.profiling]
inherits = "release"
debug = true
