[workspace]
resolver = "2"
members = [
    "access_server",
    "common",
    "protocol",
    "proxy_client",
    "proxy_server",
    "server",
    "tests",
]

[workspace.dependencies]
anyhow = "1"
async-speed-limit = { version = "0.4", features = ["tokio"] }
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
bincode = "1"
bytes = "1"
bytesize = "1"
clap = "4"
csv_logger = { git = "https://github.com/Banyc/csv_logger.git", rev = "90234e9ca11eea2dd5916e024be5368530e42944" }
dhat = "0.3"
duplicate = "1"
file_watcher_tokio = "0.3"
futures = "0.3"
futures-core = "0.3"
http-body-util = "0.1"
hyper = "1"
hyper-util = "0.1"
lockfree-object-pool = "0.1"
lru = "0.12"
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.14", default-features = false }
monitor_table = { git = "https://github.com/Banyc/monitor_table.git", tag = "v0.0.3" }
mptcp = { git = "https://github.com/Banyc/mptcp.git", rev = "8c0b8ee35bc7d570de272f5da7af6742b460e23a" }
notify = "6"
once_cell = "1"
pin-project-lite = "0.2"
rand = "0.8"
regex = "1"
rtp = { git = "https://github.com/Banyc/rtp.git", tag = "v0.0.27" }
scopeguard = "1"
serde = "1"
serde_json = "1"
serial_test = "3"
slotmap = "1"
strict-num = "0.2"
swap = { git = "https://github.com/Banyc/swap.git", rev = "d10a8b5b10503fa6ebac523cfcaa4d62135a665f" }
table_log = { git = "https://github.com/Banyc/table_log.git", rev = "fc49af71a17257e03583d93114546065e8f2f470" }
thiserror = "1"
tokio = "1"
tokio-io-timeout = "1"
tokio-util = "0.7"
tokio_chacha20 = { git = "https://github.com/Banyc/tokio_chacha20.git", tag = "v0.0.1" }
tokio_conn_pool = { git = "https://github.com/Banyc/tokio_conn_pool.git", rev = "8454496666bc1960223ca2eb78535fe2fd30cfbe" }
tokio_kcp = "0.9"
tokio_throughput = { git = "https://github.com/Banyc/tokio_throughput.git", rev = "80cbf0572623762665caff07781cee3e0d97cfc7" }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
udp_listener = { git = "https://github.com/Banyc/udp_listener.git", tag = "v0.0.8" }

[profile.profiling]
inherits = "release"
debug = true
