[workspace]
resolver = "2"
members = [
    "access_server",
    "common",
    "protocol",
    "proxy_client",
    "proxy_server",
    "server",
    "tests",
]

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
async-speed-limit = { version = "0.4", features = ["tokio"] }
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bincode = "1"
bytes = "1"
clap = "4"
dhat = "0.3"
duplicate = "2"
file_rotating_log = { git = "https://github.com/Banyc/file_rotating_log.git", tag = "v0.0.2" }
file_watcher_tokio = "0.4"
futures = "0.3"
futures-core = "0.3"
http-body-util = "0.1"
hdv = "0.6"
hdv_derive = "0.6"
hyper = "1"
hyper-util = "0.1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
monitor_table = { git = "https://github.com/Banyc/monitor_table.git", tag = "v0.0.13" }
mptcp = { git = "https://github.com/Banyc/mptcp.git", tag = "v0.0.2" }
mux = { git = "https://github.com/Banyc/mux.git", tag = "v0.0.5" }
notify = "7"
pin-project-lite = "0.2"
primitive = { git = "https://github.com/Banyc/primitive.git", tag = "v0.0.58" }
rand = "0.9"
regex = "1"
rtp = { git = "https://github.com/Banyc/rtp.git", tag = "v0.0.69" }
scopeguard = "1"
serde = "1"
serde_json = "1"
serial_test = "3"
slotmap = "1"
swap = { git = "https://github.com/Banyc/swap.git", rev = "d10a8b5b10503fa6ebac523cfcaa4d62135a665f" }
thiserror = "2"
tokio = "1"
tokio-io-timeout = "1"
tokio-util = "0.7"
tokio_chacha20 = { git = "https://github.com/Banyc/tokio_chacha20.git", tag = "v0.0.2" }
tokio_conn_pool = { git = "https://github.com/Banyc/tokio_conn_pool.git", rev = "8454496666bc1960223ca2eb78535fe2fd30cfbe" }
tokio_kcp = "0.9"
tokio_throughput = { git = "https://github.com/Banyc/tokio_throughput.git", tag = "v0.0.1" }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
udp_listener = { git = "https://github.com/Banyc/udp_listener.git", tag = "v0.0.13" }

[profile.profiling]
inherits = "release"
debug = true
