[package]
name = "access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { path = "../client" }
get_config = "0.1.1"
common = { path = "../common" }
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
async-trait = "0.1.67"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
bytes = "1.4.0"
http-body-util = "0.1.0-rc.2"
thiserror = "1.0.40"
