[package]
name = "access_server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-speed-limit = { workspace = true }
bytes = { workspace = true }
common = { path = "../common" }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["tokio"] }
monitor_table = { workspace = true }
pin-project-lite = { workspace = true }
protocol = { path = "../protocol" }
proxy_client = { path = "../proxy_client" }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
table_log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio_chacha20 = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
