[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-speed-limit = { workspace = true }
async-trait = { workspace = true }
base64 = "0.21"
bincode = { workspace = true }
bytes = { workspace = true }
bytesize = "1"
duplicate = "1"
futures-core = "0.3"
lockfree-object-pool = "0.1"
lru = "0.12"
metrics = { workspace = true }
monitor_table = { workspace = true }
once_cell = { workspace = true }
pin-project-lite = "0.2"
rand = "0.8"
regex = { workspace = true }
scopeguard = "1"
serde = { workspace = true, features = ["derive", "rc"] }
slotmap = "1"
strict-num = { workspace = true }
swap = { workspace = true }
table_log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-io-timeout = "1"
tokio-util = { workspace = true }
tokio_chacha20 = { workspace = true }
tokio_conn_pool = { workspace = true }
tokio_throughput = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = "1"
