[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-speed-limit = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
duplicate = { workspace = true }
futures-core = { workspace = true }
lockfree-object-pool = { workspace = true }
lru = { workspace = true }
metrics = { workspace = true }
monitor_table = { workspace = true }
once_cell = { workspace = true }
pin-project-lite = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
slotmap = { workspace = true }
strict-num = { workspace = true }
swap = { workspace = true }
table_log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-io-timeout = { workspace = true }
tokio-util = { workspace = true }
tokio_chacha20 = { workspace = true }
tokio_conn_pool = { workspace = true }
tokio_throughput = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
