[package]
name = "common"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ae = { workspace = true }
ahash = { workspace = true }
async-speed-limit = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
duplicate = { workspace = true }
file_rotating_log = { workspace = true }
futures-core = { workspace = true }
hdv = { workspace = true }
hdv_derive = { workspace = true }
metrics = { workspace = true }
monitor_table = { workspace = true, features = ["hdv"] }
pin-project-lite = { workspace = true }
primitive = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
slotmap = { workspace = true }
swap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-io-timeout = { workspace = true }
tokio-util = { workspace = true }
tokio_chacha20 = { workspace = true }
tokio_conn_pool = { workspace = true }
tokio_throughput = { workspace = true }
tracing = { workspace = true }
udp_listener = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
