[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.155", features = ["derive"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"

[lib]
name = "models"
path = "lib.rs"
