[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ae = { workspace = true }
async-speed-limit = { workspace = true }
async-trait = { workspace = true }
common = { path = "../common" }
metrics = { workspace = true }
mptcp = { workspace = true }
mux = { workspace = true }
rand = { workspace = true }
rtp = { workspace = true }
serde = { workspace = true }
swap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio_chacha20 = { workspace = true }
tokio_conn_pool = { workspace = true }
tokio_kcp = { workspace = true }
tracing = { workspace = true }
udp_listener = { workspace = true }

bytes = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["tokio"] }
monitor_table = { workspace = true }
pin-project-lite = { workspace = true }
regex = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
