[package]
name = "proxy_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
common = { path = "../common" }
metrics = "0.21.1"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
