[package]
name = "proxy_client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
common = { path = "../common" }
metrics = { workspace = true }
primitive = { workspace = true }
protocol = { path = "../protocol" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio_chacha20 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
