[package]
name = "proxy_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-speed-limit = { version = "0.4.1", features = ["tokio"] }
bincode = "1.3.3"
common = { path = "../common" }
mptcp = { git = "https://github.com/Banyc/mptcp.git", rev = "44b3d6366e6580e80f70607263ed6065b493b78f" }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tokio_kcp = "0.9.6"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
