[package]
name = "proxy_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-speed-limit = { version = "0.4.1", features = ["tokio"] }
bincode = "1.3.3"
common = { path = "../common" }
mptcp = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = "1.0.50"
tokio = { workspace = true, features = ["full"] }
tokio_kcp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
