[package]
name = "proxy_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-speed-limit = { workspace = true }
bincode = { workspace = true }
common = { path = "../common" }
mptcp = { workspace = true }
serde = { workspace = true, features = ["derive"] }
swap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio_chacha20 = { workspace = true }
tokio_kcp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
