[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
access_server = { path = "../access_server" }
axum = "0.6.20"
clap = { version = "4.4.6", features = ["derive"] }
common = { path = "../common" }
file_watcher_tokio = "0.3.0"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
notify = "6.1.1"
proxy_server = { path = "../proxy_server" }
serde = { version = "1.0.188", features = ["derive"] }
tabled = "0.14.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.9"
toml = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
