[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
access_server = { path = "../access_server" }
anyhow = "1"
axum = { version = "0.7" }
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
csv_logger = { workspace = true }
dhat = { version = "0.3", optional = true }
file_watcher_tokio = "0.3"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
notify = "6"
proxy_server = { path = "../proxy_server" }
serde = { workspace = true, features = ["derive"] }
swap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
dhat-heap = ["dhat"]
