[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
access_server = { path = "../access_server" }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
common = { path = "../common" }
dhat = { workspace = true, optional = true }
file_watcher_tokio = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
protocol = { path = "../protocol" }
serde = { workspace = true, features = ["derive"] }
swap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
dhat-heap = ["dhat"]
