[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
rand = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
protocol = { path = "../protocol" }
proxy_client = { path = "../proxy_client" }
proxy_server = { path = "../proxy_server" }
serial_test = { workspace = true }
swap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio_chacha20 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
